welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: not found: value nb
    nb = compteur(tab,k+1)
    ^golomb:7: error: not found: value nb
    if (tab(k) != nb) {
                  ^golomb:8: error: not found: value nb
     nb = compteur(tab,k+1)
     ^