welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var tab = new Array[Int](2*num)
  var repere = 0
  tab(0) = 1
  for (k <- 0 to num-1) {
    nb = compteur(tab,k+1)
    if (tab(k) != nb) {
     nb = compteur(tab,k+1)
     repere = repere + 1 
     tab(repere) = k+1
    }
    tab(k+1) = k+2
    repere = repere + 1
  }
  return tab(num-1)
}

def compteur(nums:Array[Int], nb:Int): Int = {
  var compteur = 0
  for (k <- 0 to nums.length-1) {
    if (nums(k) == nb) {
      compteur = compteur + 1
    }
  }
  return compteur
}